--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@types/multer": "^1.4.12",
     "aws-sdk": "^2.1692.0",
     "mongoose": "^8.9.6",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "nestjs-form-data": "^1.9.93",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
