--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "start:local": "cross-env NODE_ENV=local nest start --watch",
-  	"start:devops": "cross-env NODE_ENV=dev nest start --watch",
+    "start:devops": "cross-env NODE_ENV=dev nest start --watch",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -30,6 +30,7 @@
     "@nestjs/platform-express": "^11.0.7",
     "@types/multer": "^1.4.12",
     "aws-sdk": "^2.1692.0",
+    "dotenv": "^16.4.7",
     "mongoose": "^8.9.6",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
